idf_component_register(
	SRCS
		src/source/CHOPCONF.cpp
		src/source/COOLCONF.cpp
		src/source/DRV_CONF.cpp
		src/source/DRVCONF.cpp
		src/source/DRVCTRL.cpp
		src/source/DRV_STATUS.cpp
		src/source/DRVSTATUS.cpp
		src/source/ENCMODE.cpp
		src/source/GCONF.cpp
		src/source/IHOLD_IRUN.cpp
		src/source/PWMCONF.cpp
		src/source/RAMP_STAT.cpp
		src/source/SERIAL_SWITCH.cpp
		src/source/SGCSCONF.cpp
		src/source/SHORT_CONF.cpp
		src/source/SMARTEN.cpp
		src/source/SW_MODE.cpp
		src/source/SW_SPI.cpp
		src/source/TMC2130Stepper.cpp
		src/source/TMC2160Stepper.cpp
		src/source/TMC2208Stepper.cpp
		src/source/TMC2209Stepper.cpp
		src/source/TMC2660Stepper.cpp
		src/source/TMC5130Stepper.cpp
		src/source/TMC5160Stepper.cpp
		src/source/TMCStepper.cpp
    INCLUDE_DIRS src
    PRIV_REQUIRES arduino)
